--- a/WebForm/WebForm.DAL/WebForm.DAL.csproj
+++ b/WebForm/WebForm.DAL/WebForm.DAL.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Infrastructure\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WebForm.Data1\WebForm.Data.csproj">
+    <ProjectReference Include="..\WebForm.Data\WebForm.Data.csproj">
       <Project>{f7065605-176d-443e-90f3-960163388f42}</Project>
       <Name>WebForm.Data</Name>
     </ProjectReference>
